--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "devDependencies": {
+    "@types/faker": "^4.1.5",
+    "@types/graphql": "^14.0.7",
+    "@types/node": "^10.12.19",
     "gts": "^0.9.0",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.1",
     "typescript": "~3.1.0"
   },
   "scripts": {
-    "check": "gts check",
-    "clean": "gts clean",
     "compile": "tsc -p .",
-    "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
     "posttest": "npm run check",
@@ -17,8 +17,7 @@
     "debug": "ts-node --inspect src/index.ts"
   },
   "dependencies": {
-    "@types/graphql": "^14.0.7",
-    "@types/node": "^10.12.19",
+    "faker": "^4.1.0",
     "graphql": "^14.1.1",
     "yaml": "^1.3.1"
   }
